kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vbb-departure-hotline
  namespace: juliuste
spec:
  selector:
    matchLabels:
      app: vbb-departure-hotline
  replicas: 1
  template:
    metadata:
      labels:
        app: vbb-departure-hotline
    spec:
      containers:
      - name: vbb-departure-hotline
        image: <IMAGE>
        ports:
        - containerPort: 3000
