kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vbb-departure-hotline
  namespace: juliuste
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: vbb-departure-hotline
