kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vbb-departure-hotline-ingress
  namespace: juliuste
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "certificate-issuer"
spec:
  tls:
  - hosts:
    - vbb-departure-hotline.juliustens.eu
    secretName: vbb-departure-hotline-tls
  rules:
  - host: vbb-departure-hotline.juliustens.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vbb-departure-hotline
            port:
              number: 80
